# DoubleNaught

./: run.sh
doc/: According to Claude.md  Broader Picture.md  Chapter 10 According to Claude.md  Crossing.md  Domains.md  Episode 1 Treatment.md  Journal.md  Log Line.md  Node Aide.md  Premise.md  Script.md  SubMods.md  Synopsis.md  The Storm.md  Treatment.md
doc/.obsidian/: workspace.json
doc/Clippings/: Node Identification.md  Questions.md  What SLMs are for.md  YT to Discord Transition.md
double_touch/: .gitignore  README.md  pyproject.toml
double_touch/src/double_touch/: __init__.py  __main__.py  app.py  inference.py  models.py  sessions.py
double_touch/test/: test_segment_routes.py
double_vision/: .env  DESIGN.md  README.md  pubspec.yaml
double_vision/android/app/: build.gradle.kts
double_vision/ios/Runner/: Info.plist
double_vision/ios/Runner.xcodeproj/: project.pbxproj
double_vision/lib/: main.dart
double_vision/lib/config/: node_registry.dart  root_feature.dart  sanity_config.dart
double_vision/lib/models/: workflow.dart
double_vision/lib/pages/: home_page.dart  workflow_page.dart
double_vision/lib/services/: sam3_api.dart  storage_service.dart
double_vision/lib/widgets/: base_node.dart  connection_drag_scope.dart  double_naught_node_wrapper.dart  file_source_node.dart  input_connector.dart  output_connector.dart  (+3 more)
double_vision/linux/: CMakeLists.txt
double_vision/schemas/: node_search.json
double_vision/test/: workflow_page_test.dart
double_vision/web/: index.html  manifest.json
double_vision/windows/: CMakeLists.txt
(+9 files in other folders)
